Fix RangePicker text overlap

--- a/components/date-picker/style/RangePicker.less
+++ b/components/date-picker/style/RangePicker.less
@@ -17,11 +17,10 @@
 
 .@{calendar-prefix-cls}-range-picker-separator {
   color: @text-color-secondary;
-  position: absolute;
-  top: 50%;
-  margin-top: -10px;
-  line-height: 20px;
-  height: 20px;
+  width: 8px;
+  display: inline-block;
+  line-height: 18px;
+  vertical-align: top;
 }
 
 .@{calendar-prefix-cls}-range {
